--- a/WarmCoffe/src/GUI/EventUserView.form
+++ b/WarmCoffe/src/GUI/EventUserView.form
@@ -35,6 +35,9 @@
           <Color blue="87" green="87" red="87" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel1MouseClicked"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
